--- a/Capstone Two/Diabetic Patient Readmission - Data Wrangling.ipynb
+++ b/Capstone Two/Diabetic Patient Readmission - Data Wrangling.ipynb
@@ -309,6 +309,171 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "714ba805",
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>discharge_disposition_id</th>\n",
+       "      <th>description</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>13</td>\n",
+       "      <td>Hospice / home</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>14</td>\n",
+       "      <td>Hospice / medical facility</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>18</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>19</td>\n",
+       "      <td>Expired at home. Medicaid only, hospice.</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>20</td>\n",
+       "      <td>Expired in a medical facility. Medicaid only, ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>21</td>\n",
+       "      <td>Expired, place unknown. Medicaid only, hospice.</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   discharge_disposition_id                                        description\n",
+       "12                       13                                     Hospice / home\n",
+       "13                       14                         Hospice / medical facility\n",
+       "17                       18                                                NaN\n",
+       "18                       19           Expired at home. Medicaid only, hospice.\n",
+       "19                       20  Expired in a medical facility. Medicaid only, ...\n",
+       "20                       21    Expired, place unknown. Medicaid only, hospice."
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "no_death_filter = ['13','14','18','19','20','21']\n",
+    "drops = discharge_disposition_ids[discharge_disposition_ids.discharge_disposition_id.isin(no_death_filter)]\n",
+    "drops"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "d4677f03",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Int64Index: 97294 entries, 0 to 101765\n",
+      "Data columns (total 50 columns):\n",
+      " #   Column                    Non-Null Count  Dtype \n",
+      "---  ------                    --------------  ----- \n",
+      " 0   encounter_id              97294 non-null  int64 \n",
+      " 1   patient_nbr               97294 non-null  int64 \n",
+      " 2   race                      97294 non-null  object\n",
+      " 3   gender                    97294 non-null  object\n",
+      " 4   age                       97294 non-null  object\n",
+      " 5   weight                    97294 non-null  object\n",
+      " 6   admission_type_id         97294 non-null  int64 \n",
+      " 7   discharge_disposition_id  97294 non-null  int64 \n",
+      " 8   admission_source_id       97294 non-null  int64 \n",
+      " 9   time_in_hospital          97294 non-null  int64 \n",
+      " 10  payer_code                97294 non-null  object\n",
+      " 11  medical_specialty         97294 non-null  object\n",
+      " 12  num_lab_procedures        97294 non-null  int64 \n",
+      " 13  num_procedures            97294 non-null  int64 \n",
+      " 14  num_medications           97294 non-null  int64 \n",
+      " 15  number_outpatient         97294 non-null  int64 \n",
+      " 16  number_emergency          97294 non-null  int64 \n",
+      " 17  number_inpatient          97294 non-null  int64 \n",
+      " 18  diag_1                    97294 non-null  object\n",
+      " 19  diag_2                    97294 non-null  object\n",
+      " 20  diag_3                    97294 non-null  object\n",
+      " 21  number_diagnoses          97294 non-null  int64 \n",
+      " 22  max_glu_serum             97294 non-null  object\n",
+      " 23  A1Cresult                 97294 non-null  object\n",
+      " 24  metformin                 97294 non-null  object\n",
+      " 25  repaglinide               97294 non-null  object\n",
+      " 26  nateglinide               97294 non-null  object\n",
+      " 27  chlorpropamide            97294 non-null  object\n",
+      " 28  glimepiride               97294 non-null  object\n",
+      " 29  acetohexamide             97294 non-null  object\n",
+      " 30  glipizide                 97294 non-null  object\n",
+      " 31  glyburide                 97294 non-null  object\n",
+      " 32  tolbutamide               97294 non-null  object\n",
+      " 33  pioglitazone              97294 non-null  object\n",
+      " 34  rosiglitazone             97294 non-null  object\n",
+      " 35  acarbose                  97294 non-null  object\n",
+      " 36  miglitol                  97294 non-null  object\n",
+      " 37  troglitazone              97294 non-null  object\n",
+      " 38  tolazamide                97294 non-null  object\n",
+      " 39  examide                   97294 non-null  object\n",
+      " 40  citoglipton               97294 non-null  object\n",
+      " 41  insulin                   97294 non-null  object\n",
+      " 42  glyburide-metformin       97294 non-null  object\n",
+      " 43  glipizide-metformin       97294 non-null  object\n",
+      " 44  glimepiride-pioglitazone  97294 non-null  object\n",
+      " 45  metformin-rosiglitazone   97294 non-null  object\n",
+      " 46  metformin-pioglitazone    97294 non-null  object\n",
+      " 47  change                    97294 non-null  object\n",
+      " 48  diabetesMed               97294 non-null  object\n",
+      " 49  readmitted                97294 non-null  object\n",
+      "dtypes: int64(13), object(37)\n",
+      "memory usage: 37.9+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "no_death_filter = [13,14,18,19,20,21]\n",
+    "df1 = df1[~df1.discharge_disposition_id.isin(no_death_filter)]\n",
+    "df1.info()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "f49de989",
    "metadata": {},
@@ -320,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "216ab5bd",
    "metadata": {},
    "outputs": [
@@ -343,7 +508,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -354,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "f38799f9",
    "metadata": {},
    "outputs": [
@@ -513,7 +678,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>101766 rows × 8 columns</p>\n",
+       "<p>97294 rows × 8 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -543,10 +708,10 @@
        "101764         NO  \n",
        "101765         NO  \n",
        "\n",
-       "[101766 rows x 8 columns]"
+       "[97294 rows x 8 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -557,7 +722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "id": "e9ffb4ff",
    "metadata": {},
    "outputs": [
@@ -704,7 +869,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>101766 rows × 7 columns</p>\n",
+       "<p>97294 rows × 7 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -721,10 +886,10 @@
        "101764     443857166      None         Yes         NO     996     285    998\n",
        "101765     443867222      None          No         NO     530     530    787\n",
        "\n",
-       "[101766 rows x 7 columns]"
+       "[97294 rows x 7 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -749,21 +914,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "id": "cb41027a",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "count     101766\n",
-       "unique        10\n",
-       "top            ?\n",
-       "freq       98569\n",
+       "count     97294\n",
+       "unique       10\n",
+       "top           ?\n",
+       "freq      94160\n",
        "Name: weight, dtype: object"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -774,7 +939,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "id": "d02c06be",
    "metadata": {
     "scrolled": true
@@ -794,21 +959,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "id": "c535546e",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "count     101766\n",
-       "unique         2\n",
-       "top          Yes\n",
-       "freq       78363\n",
+       "count     97294\n",
+       "unique        2\n",
+       "top         Yes\n",
+       "freq      75521\n",
        "Name: diabetesMed, dtype: object"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -827,21 +992,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "id": "601c1592",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "count     101766\n",
-       "unique         3\n",
-       "top           NO\n",
-       "freq       54864\n",
+       "count     97294\n",
+       "unique        3\n",
+       "top          NO\n",
+       "freq      51964\n",
        "Name: readmitted, dtype: object"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -881,17 +1046,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "id": "3b69b593",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "101766"
+       "97294"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -902,17 +1067,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "id": "513a4907",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "71518"
+       "68921"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -931,17 +1096,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "id": "9832407b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(101766, 46)"
+       "(97294, 46)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -967,21 +1132,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "id": "1b6f3feb",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "count     101766\n",
-       "unique        73\n",
-       "top            ?\n",
-       "freq       49949\n",
+       "count     97294\n",
+       "unique       73\n",
+       "top           ?\n",
+       "freq      46644\n",
        "Name: medical_specialty, dtype: object"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -992,7 +1157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "id": "212b4d19",
    "metadata": {},
    "outputs": [],
@@ -1002,19 +1167,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "id": "1fa2328a",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Other    90409\n",
-       "<30      11357\n",
+       "Other    86439\n",
+       "<30      10855\n",
        "Name: readmitted, dtype: int64"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1026,7 +1191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "id": "0d9f139e",
    "metadata": {},
    "outputs": [],
@@ -1036,7 +1201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "id": "bb816c75",
    "metadata": {
     "scrolled": false
@@ -1408,7 +1573,7 @@
        "[10 rows x 46 columns]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1419,7 +1584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 25,
    "id": "7b95c4de",
    "metadata": {},
    "outputs": [],
