--- a/Capstone Two/Diabetic Patient Readmission - Pre-processing and Training Data Development.ipynb
+++ b/Capstone Two/Diabetic Patient Readmission - Pre-processing and Training Data Development.ipynb
@@ -294,7 +294,7 @@
     {
      "data": {
       "text/plain": [
-       "((101766, 43), (101766, 1))"
+       "((97294, 43), (97294, 1))"
       ]
      },
      "execution_count": 4,
@@ -483,7 +483,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 2408 columns</p>\n",
+       "<p>5 rows × 2398 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -536,7 +536,7 @@
        "3                1  \n",
        "4                1  \n",
        "\n",
-       "[5 rows x 2408 columns]"
+       "[5 rows x 2398 columns]"
       ]
      },
      "execution_count": 5,
@@ -552,31 +552,6 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "2f882f07",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(array([1.42599707e+01, 1.95199373e+03, 9.89249834e+00, ...,\n",
-       "        1.25618025e-01, 1.78868771e+01, 1.72186810e+01]),\n",
-       " array([1.59215094e-04, 0.00000000e+00, 1.65953905e-03, ...,\n",
-       "        7.23019404e-01, 2.34432061e-05, 3.33144287e-05]))"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "chi_sq = chi2(X, y)\n",
-    "chi_sq"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
    "id": "35acadf9",
    "metadata": {
     "scrolled": true
@@ -589,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "716c6521",
    "metadata": {},
    "outputs": [],
@@ -600,7 +575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "e6abf2c4",
    "metadata": {},
    "outputs": [
@@ -608,7 +583,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.8402788531271586 0.0012654842316573232\n"
+      "0.8390732941524386 0.000911942551961447\n"
      ]
     }
    ],
@@ -621,7 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "c84bb440",
    "metadata": {},
    "outputs": [],
@@ -635,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "71f3bec1",
    "metadata": {},
    "outputs": [
@@ -645,12 +620,12 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "         <30       0.63      0.04      0.08      8508\n",
-      "       Other       0.89      1.00      0.94     67816\n",
+      "         <30       0.59      0.04      0.07      8154\n",
+      "       Other       0.89      1.00      0.94     64816\n",
       "\n",
-      "    accuracy                           0.89     76324\n",
-      "   macro avg       0.76      0.52      0.51     76324\n",
-      "weighted avg       0.86      0.89      0.85     76324\n",
+      "    accuracy                           0.89     72970\n",
+      "   macro avg       0.74      0.52      0.51     72970\n",
+      "weighted avg       0.86      0.89      0.84     72970\n",
       "\n"
      ]
     }
@@ -661,7 +636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "84491c8e",
    "metadata": {},
    "outputs": [
@@ -669,21 +644,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.8321285434174606 0.000810181128554641\n"
+      "0.8343890098978795 0.0007200713181354968\n"
      ]
     }
    ],
    "source": [
-    "knn3 = KNeighborsClassifier(n_neighbors=3)\n",
-    "knn3_cv_results = cross_validate(knn3, X_train, y_train, cv=5, \n",
+    "knn = KNeighborsClassifier()     # Default n_neighbors=5\n",
+    "knn_cv_results = cross_validate(knn, X_train, y_train, cv=5, \n",
     "                                    scoring='f1_weighted', n_jobs=-1) #'f1' producing 'nan' for all scores\n",
-    "knn3_cv_scores = knn3_cv_results['test_score']\n",
-    "print(np.mean(knn3_cv_scores), np.std(knn3_cv_scores))"
+    "knn_cv_scores = knn_cv_results['test_score']\n",
+    "print(np.mean(knn_cv_scores), np.std(knn_cv_scores))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "3e9cf1c5",
    "metadata": {},
    "outputs": [
@@ -693,71 +668,23 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "         <30       0.72      0.24      0.36      8508\n",
-      "       Other       0.91      0.99      0.95     67816\n",
+      "         <30       0.66      0.09      0.16      8154\n",
+      "       Other       0.90      0.99      0.94     64816\n",
       "\n",
-      "    accuracy                           0.90     76324\n",
-      "   macro avg       0.82      0.61      0.65     76324\n",
-      "weighted avg       0.89      0.90      0.88     76324\n",
+      "    accuracy                           0.89     72970\n",
+      "   macro avg       0.78      0.54      0.55     72970\n",
+      "weighted avg       0.87      0.89      0.86     72970\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "class_report(knn3, X_train, y_train)"
+    "class_report(knn, X_train, y_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "cb82c7a9",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.8360957220214129 0.0006341719243474624\n"
-     ]
-    }
-   ],
-   "source": [
-    "knn5 = KNeighborsClassifier(n_neighbors=5)\n",
-    "knn5_cv_results = cross_validate(knn5, X_train, y_train, cv=5, \n",
-    "                                    scoring='f1_weighted', n_jobs=-1) #'f1' producing 'nan' for all scores\n",
-    "knn5_cv_scores = knn5_cv_results['test_score']\n",
-    "print(np.mean(knn5_cv_scores), np.std(knn5_cv_scores))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "id": "0f975161",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "              precision    recall  f1-score   support\n",
-      "\n",
-      "         <30       0.66      0.09      0.16      8508\n",
-      "       Other       0.90      0.99      0.94     67816\n",
-      "\n",
-      "    accuracy                           0.89     76324\n",
-      "   macro avg       0.78      0.54      0.55     76324\n",
-      "weighted avg       0.87      0.89      0.86     76324\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "class_report(knn5, X_train, y_train)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "id": "454cd2b5",
    "metadata": {},
    "outputs": [
@@ -765,7 +692,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.8185659566436037 0.0014226651221841584\n"
+      "0.8179600458986709 0.0017860336876575878\n"
      ]
     }
    ],
@@ -779,7 +706,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
    "id": "58cab245",
    "metadata": {},
    "outputs": [
@@ -789,12 +716,12 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "         <30       1.00      1.00      1.00      8508\n",
-      "       Other       1.00      1.00      1.00     67816\n",
+      "         <30       1.00      1.00      1.00      8154\n",
+      "       Other       1.00      1.00      1.00     64816\n",
       "\n",
-      "    accuracy                           1.00     76324\n",
-      "   macro avg       1.00      1.00      1.00     76324\n",
-      "weighted avg       1.00      1.00      1.00     76324\n",
+      "    accuracy                           1.00     72970\n",
+      "   macro avg       1.00      1.00      1.00     72970\n",
+      "weighted avg       1.00      1.00      1.00     72970\n",
       "\n"
      ]
     }
@@ -805,7 +732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 15,
    "id": "637405d2",
    "metadata": {},
    "outputs": [
@@ -813,7 +740,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.8367650447037785 0.00010619024598811543\n"
+      "0.8363163409003096 0.000382319325557314\n"
      ]
     }
    ],
@@ -827,7 +754,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 16,
    "id": "857983ef",
    "metadata": {},
    "outputs": [
@@ -837,12 +764,12 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "         <30       1.00      1.00      1.00      8508\n",
-      "       Other       1.00      1.00      1.00     67816\n",
+      "         <30       1.00      1.00      1.00      8154\n",
+      "       Other       1.00      1.00      1.00     64816\n",
       "\n",
-      "    accuracy                           1.00     76324\n",
-      "   macro avg       1.00      1.00      1.00     76324\n",
-      "weighted avg       1.00      1.00      1.00     76324\n",
+      "    accuracy                           1.00     72970\n",
+      "   macro avg       1.00      1.00      1.00     72970\n",
+      "weighted avg       1.00      1.00      1.00     72970\n",
       "\n"
      ]
     }
@@ -853,7 +780,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 17,
    "id": "4882253e",
    "metadata": {},
    "outputs": [
@@ -861,7 +788,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.8305078768135129 0.0019464326041995612\n"
+      "0.8292039310675205 0.0007536205251484708\n"
      ]
     }
    ],
@@ -875,7 +802,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 18,
    "id": "9df3f9f6",
    "metadata": {},
    "outputs": [
@@ -885,12 +812,12 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "         <30       0.21      0.07      0.10      8508\n",
-      "       Other       0.89      0.97      0.93     67816\n",
+      "         <30       0.22      0.08      0.11      8154\n",
+      "       Other       0.89      0.97      0.93     64816\n",
       "\n",
-      "    accuracy                           0.87     76324\n",
-      "   macro avg       0.55      0.52      0.52     76324\n",
-      "weighted avg       0.82      0.87      0.84     76324\n",
+      "    accuracy                           0.87     72970\n",
+      "   macro avg       0.56      0.52      0.52     72970\n",
+      "weighted avg       0.82      0.87      0.84     72970\n",
       "\n"
      ]
     }
@@ -901,7 +828,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 19,
    "id": "31b163c5",
    "metadata": {},
    "outputs": [
@@ -909,7 +836,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.839034061781024 0.00042559714327267123\n"
+      "0.8380959949338823 0.0010261218651382267\n"
      ]
     }
    ],
@@ -923,7 +850,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 20,
    "id": "b8f9de49",
    "metadata": {},
    "outputs": [
@@ -933,12 +860,12 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "         <30       0.63      0.06      0.11      8508\n",
-      "       Other       0.89      1.00      0.94     67816\n",
+      "         <30       0.63      0.07      0.12      8154\n",
+      "       Other       0.89      1.00      0.94     64816\n",
       "\n",
-      "    accuracy                           0.89     76324\n",
-      "   macro avg       0.76      0.53      0.53     76324\n",
-      "weighted avg       0.86      0.89      0.85     76324\n",
+      "    accuracy                           0.89     72970\n",
+      "   macro avg       0.76      0.53      0.53     72970\n",
+      "weighted avg       0.87      0.89      0.85     72970\n",
       "\n"
      ]
     }
@@ -949,7 +876,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 21,
    "id": "025f06bc",
    "metadata": {},
    "outputs": [
@@ -957,7 +884,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.8400447559508795 0.0005316555915480847\n"
+      "0.8401334142690748 0.0009237479352603954\n"
      ]
     }
    ],
@@ -971,7 +898,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 22,
    "id": "96eb3400",
    "metadata": {},
    "outputs": [
@@ -979,15 +906,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[12:40:35] WARNING: ..\\src\\learner.cc:1115: Starting in XGBoost 1.3.0, the default evaluation metric used with the objective 'binary:logistic' was changed from 'error' to 'logloss'. Explicitly set eval_metric if you'd like to restore the old behavior.\n",
+      "[19:04:24] WARNING: ..\\src\\learner.cc:1115: Starting in XGBoost 1.3.0, the default evaluation metric used with the objective 'binary:logistic' was changed from 'error' to 'logloss'. Explicitly set eval_metric if you'd like to restore the old behavior.\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "         <30       0.90      0.05      0.10      8508\n",
-      "       Other       0.89      1.00      0.94     67816\n",
+      "         <30       0.87      0.05      0.10      8154\n",
+      "       Other       0.89      1.00      0.94     64816\n",
       "\n",
-      "    accuracy                           0.89     76324\n",
-      "   macro avg       0.90      0.53      0.52     76324\n",
-      "weighted avg       0.89      0.89      0.85     76324\n",
+      "    accuracy                           0.89     72970\n",
+      "   macro avg       0.88      0.53      0.52     72970\n",
+      "weighted avg       0.89      0.89      0.85     72970\n",
       "\n"
      ]
     }
